--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.static-path-pattern= /static/**
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
